2026-01-04  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-decode-ansi-colors): Allow more
	general build log names, e.g. for multilib.

2026-01-01  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-decode-ansi-colors): New function,
	handler for ANSI color decoding in build logs.
	(ebuild-mode-find-build-log): Don't decode ANSI colors here.
	(ebuild-repo-mode-maybe-enable): Don't autoload.
	(ebuild-mode-find-file-hook): New hook function, calls
	ebuild-repo-mode-maybe-enable and ebuild-mode-decode-ansi-colors.
	(find-file-hook): Update.
	* test/ebuild-mode-tests.el (ebuild-mode-test-decode-ansi-colors):
	New test.

	* ebuild-mode.el (ebuild-mode-find-s): Use compare-strings.
	We cannot use string-prefix-p because XEmacs doesn't support it.

2025-12-31  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.80 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2025-07-18  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.79 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* test/ebuild-mode-tests.el (ebuild-mode-test-run-command-foo):
	New test.

2025-07-09  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-list)
	(ebuild-mode-arch-stable-list, ebuild-mode-licenses)
	(ebuild-mode-eclasses, ebuild-mode-use-flags)
	(ebuild-mode-get-builddir, ebuild-mode-find-workdir)
	(ebuild-mode-find-image-dir, ebuild-mode-find-s)
	(ebuild-mode-find-build-log): Use expand-file-name instead of
	concat because it is slightly more robust, considering that the
	directories may be custom-defined by the user.

2025-02-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.78 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2025-01-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-find-s): Restrict scope of the inner
	let-binding.

	* ebuild-mode.el (ebuild-commands-list): Remove "depend" command.
